fixed margtin top on mobile view

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -102,6 +102,9 @@
     width: 100%;
     margin-top: 20px;
   }
+  .services-heading {
+    margin-top: 20px !important;
+  }
 
   .welcome {
     margin-top: 130px !important;
